--- a/mingus/templates/proxy/proxy_list_front.html
+++ b/mingus/templates/proxy/proxy_list_front.html
@@ -5,10 +5,10 @@
     {# Only put delegation info on the root page (0) #} 
     {% ifequal page_obj.number 1 %}
     <link rel="openid.server" href="http://www.myopenid.com/server">
-    <link rel="openid.delegate" href="http://mikl.myopenid.com/">
-    <link rel="openid2.local_id" href="http://mikl.myopenid.com">
+    <link rel="openid.delegate" href="http://mikkelhoegh.myopenid.com/">
+    <link rel="openid2.local_id" href="http://mikkelhoegh.myopenid.com">
     <link rel="openid2.provider" href="http://www.myopenid.com/server">
-    <meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=mikl.myopenid.com">
+    <meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=mikkelhoegh.myopenid.com">
     {% endifequal %}
 {% endblock %}
 
