--- a/mingus/templates/base.html
+++ b/mingus/templates/base.html
@@ -185,6 +185,8 @@
     </div>
     <!-- /footer -->
 
+    {% disqus_num_replies %}
+
     <!-- google analtyics -->
     {% cache 7200 "base.analytics" %}
     {% analytics %}
