--- a/mingus/templates/contact_form/contact_form.html
+++ b/mingus/templates/contact_form/contact_form.html
@@ -5,11 +5,48 @@
 
 {% block body_id %}contact{% endblock %}
 
+{% block extra_head %}
+<meta name="viewport" content="initial-scale=1.0, user-scalable=yes" />
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        gmap_initialize(55.94676676092141, -3.1869256496429443, "Royal College of Surgeons");
+    }
+
+    function gmap_initialize(lon, lat, label) {
+        var coordinates = new google.maps.LatLng(lon, lat);
+        var settings = {
+            zoom: 15,
+            center: coordinates,
+            mapTypeControl: true,
+            mapTypeControlOptions: {style: google.maps.MapTypeControlStyle.DROPDOWN_MENU},
+            navigationControl: true,
+            navigationControlOptions: {style: google.maps.NavigationControlStyle.SMALL},
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        var map = new google.maps.Map(document.getElementById("map_canvas"), settings);
+        var venueMarker = new google.maps.Marker({
+            position: coordinates,
+            map: map,
+            title: label,
+            }
+    }
+</script>
+{% endblock %}
+
 {% block content %}
 
-<h2>{% trans "Contact me" %}</h2>
+<h2>{% trans "Contact information" %}</h2>
+<h3>Venue</h3>
+<div id="map_canvas" style="width:800px; height:500px"></div>
+<dl>
+    <dt>Telephone</dt>
+    <dd>0845 508 8515</dd>
+    <dt>Address</dt>
+    <dd>Royal College of Surgeons<br />Nicolson Street<br />Edinburgh<br />EH8 9DW</dd>
+</dl>
 
-<p>{% trans "Get in touch." %}</p>
+<h3>{% trans "Contact Form." %}</h3>
 
 <form method="POST" action=".">
 
