--- a/mingus/templates/base.html
+++ b/mingus/templates/base.html
@@ -6,7 +6,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>{% block title %}{{ BLOG_SETTINGS.site_name }}{% endblock %}</title>
+    <title>{% block title %}A Dream Play | Oxford Playhouse February 2011{% endblock %}</title>
 
     {% block meta %}
     <meta name="keywords" content="{{ BLOG_SETTINGS.meta_keywords }}">
