Remove title from flatpages default template.

--- a/mingus/templates/flatpages/default.html
+++ b/mingus/templates/flatpages/default.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="post clearfix">
-    <h2>{{ flatpage.title }}</h2>
+      {% comment %}<h2>{{ flatpage.title }}</h2>{% endcomment %}
       <div class="body">
       {{ flatpage.content|safe }}
       </div>
