--- a/mingus/templates/flatpages/default.html
+++ b/mingus/templates/flatpages/default.html
@@ -1,8 +1,8 @@
-{% extends "blog/base_blog.html" %}
+{% extends "base.html" %}
 
 {% block title %}{{ flatpage.title }} | {{ block.super }}{% endblock %}
-{% block body_class %}{{ block.super }} flatpage{% endblock %}
-{% block body_id %}flatpage_{{ flatpage.id }}{% endblock %}
+{% block body_class %} {{flatpage.title }} flatpage{% endblock %}
+{% block body_id %}{{ flatpage.title }}{% endblock %}
 
 {% block content %}
   <div class="post clearfix">
@@ -11,4 +11,4 @@
       {{ flatpage.content|safe }}
       </div>
   </div>
-{% endblock %}
+{% endblock content %}
